--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,6 @@
 spring.datasource.url = jdbc:mysql://localhost:3306/kotlin_demo_app?autoReconnect=true&useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true&useSSL=false&rewriteBatchedStatements=true&profileSQL=true&logger=Slf4JLogger&maxQuerySizeToLog=999999
 spring.datasource.username = root
 spring.datasource.password = admin
+spring.jpa.show-sql=false
+spring.jpa.open-in-view=false
+spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
