--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,6 @@ spring.datasource.password = admin
 spring.jpa.show-sql=false
 spring.jpa.open-in-view=false
 spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
+spring.mvc.async.request-timeout= -1
+server.tomcat.connection-timeout= 3600000
+server.jetty.connection-idle-timeout= 3600000
